--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       ABCD: <mark><small>Mella Mellaga Song</small></mark>
     </h2>
     <img
-      src="./pics/ABCD.jpg"
+      src="ABCD.jpg"
       alt="ABCD: Mella Mellaga Song"
       height="200"
       width="300"
     />
     <br />
     <audio
-      src="./music/[iSongs.info] 01 - Mella Mellagaa.mp3"
+      src="[iSongs.info] 01 - Mella Mellagaa.mp3"
       controls
       autoplay
     ></audio>
@@ -26,13 +26,13 @@
       Kerintha: <mark><small>Sumagandhaala Song</small></mark>
     </h2>
     <img
-      src="./pics/Kerintha.jpg"
+      src="Kerintha.jpg"
       alt="Kerintha: Sumagandhaala Song"
       width="300"
       height="200"
     /><br />
     <audio
-      src="./music/[iSongs.info] 05 - Sumagandhaala.mp3"
+      src="[iSongs.info] 05 - Sumagandhaala.mp3"
       controls
       autoplay
     ></audio>
@@ -40,13 +40,13 @@
       Kubera: <mark><small>Poyyira Mawa Song</small></mark>
     </h2>
     <img
-      src="./pics/Kubera.jpg"
+      src="Kubera.jpg"
       alt="Kubera: Poyyira Mawa Song"
       height="200"
       width="300"
     /><br />
     <audio
-      src="./music/[iSongs.info] 04 - Poyiraa Mama.mp3"
+      src="[iSongs.info] 04 - Poyiraa Mama.mp3"
       controls
       autoplay
     ></audio>
@@ -54,13 +54,13 @@
       Retro: <mark><small>Bujjama Song</small></mark>
     </h2>
     <img
-      src="./pics/Retro.jpg"
+      src="Retro.jpg"
       alt="Retro: Bujjama Song"
       height="200"
       width="300"
     /><br />
     <audio
-      src="./music/[iSongs.info] 02 - Bujjamma.mp3"
+      src="[iSongs.info] 02 - Bujjamma.mp3"
       controls
       autoplay
     ></audio>
@@ -68,13 +68,13 @@
       The Paradise: <mark><small>The Paradise - Raw Statement</small></mark>
     </h2>
     <img
-      src="./pics/Paradise.jpg"
+      src="Paradise.jpg"
       alt="The Paradise: Glimpse"
       height="200"
       width="300"
     /><br />
     <audio
-      src="./music/[iSongs.info] 02 - The Paradise Glimpse Raw Statement.mp3"
+      src="[iSongs.info] 02 - The Paradise Glimpse Raw Statement.mp3"
       controls
       autoplay
     ></audio>
