--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       Kerintha: <mark><small>Sumagandhaala Song</small></mark>
     </h2>
     <img
-      src="Kerintha.jpg"
+      src="kerintha.jpg"
       alt="Kerintha: Sumagandhaala Song"
       width="300"
       height="200"
